--- a/graphs/src/main/resources/application.properties
+++ b/graphs/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-graph.type=DIRECTED
+spring.main.log-startup-info=false
+spring.main.banner-mode=off
+graph.type=UNDIRECTED
 graph.weight=UNWEIGHTED
-graph.search=DFS
+graph.search=BFS
