--- a/graphs/src/main/resources/application.properties
+++ b/graphs/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.main.log-startup-info=false
 spring.main.banner-mode=off
 graph.type=UNDIRECTED
-graph.weight=UNWEIGHTED
-graph.search=BFS
+graph.weight=WEIGHTED
+graph.search=DFS
